--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dependencies": {
         "@remix-run/react": "^1.2.3",
         "@remix-run/vercel": "^1.2.3",
+        "@sanity/client": "^3.2.0",
+        "@sanity/image-url": "^1.0.1",
         "clsx": "^1.1.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
