--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
         "postinstall": "remix setup node"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.1.1",
+        "@fortawesome/free-solid-svg-icons": "^6.1.1",
+        "@fortawesome/react-fontawesome": "^0.1.18",
+        "@portabletext/react": "^1.0.6",
         "@remix-run/react": "^1.2.3",
         "@remix-run/vercel": "^1.2.3",
         "@sanity/client": "^3.2.0",
         "@sanity/image-url": "^1.0.1",
         "clsx": "^1.1.1",
+        "disqus-react": "^1.1.3",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "remix": "^1.2.3"
